src/objects/Swivel_Topic__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swivel_Topic__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <label>Swivel Topic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Active__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Commissions</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Commissions</value>
        </filters>
        <label>Commissions</label>
    </listViews>
    <listViews>
        <fullName>Consumer_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Consumer Accounts</value>
        </filters>
        <label>Consumer Accounts</label>
    </listViews>
    <listViews>
        <fullName>Create_Authorization</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Create Authorization</value>
        </filters>
        <label>Create Authorization</label>
    </listViews>
    <listViews>
        <fullName>Create_PCP_Referral</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Create PCP Referral</value>
        </filters>
        <label>Create PCP Referral</label>
    </listViews>
    <listViews>
        <fullName>Dental_Inquiry</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Dental Inquiry</value>
        </filters>
        <label>Dental Inquiry</label>
    </listViews>
    <listViews>
        <fullName>Licensing_and_Credentialing</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Licensing and Credentialing</value>
        </filters>
        <label>Licensing and Credentialing</label>
    </listViews>
    <listViews>
        <fullName>Life_Inquiry</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Life Inquiry</value>
        </filters>
        <label>Life Inquiry</label>
    </listViews>
    <listViews>
        <fullName>Member_Other_Inquiry</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Member Other Inquiry</value>
        </filters>
        <label>Member Other Inquiry</label>
    </listViews>
    <listViews>
        <fullName>New_Business</fullName>
        <columns>NAME</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Call_Type__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>New Business</value>
        </filters>
        <label>New Business</label>
    </listViews>
    <listViews>
        <fullName>Provider_Other_Inquiry</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Provider Other Inquiry</value>
        </filters>
        <label>Provider Other Inquiry</label>
    </listViews>
    <listViews>
        <fullName>Renewals</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Renewals</value>
        </filters>
        <label>Renewals</label>
    </listViews>
    <listViews>
        <fullName>Rx_Enrollment</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Rx Enrollment</value>
        </filters>
        <label>Rx Enrollment</label>
    </listViews>
    <listViews>
        <fullName>Update_Group_Information</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>Update Group Information</value>
        </filters>
        <label>Update Group Information</label>
    </listViews>
    <listViews>
        <fullName>View_Consumer_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>Call_Type__c</columns>
        <columns>Swivel_Topic__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Swivel_Topic__c</field>
            <operation>equals</operation>
            <value>View Consumer Dashboard</value>
        </filters>
        <label>View Consumer Dashboard</label>
    </listViews>
    <nameField>
        <displayFormat>SCT-{000}</displayFormat>
        <label>Swivel Topic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swivel Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>